@@ -46,4 +46,10 @@ class Test_SPrintf < Test::Unit::TestCase
                    inspect: Bug::Printf.v(obj).untrusted?,
                  })
   end
+
+  def test_string_prec
+    assert_equal("a", Bug::Printf.("s", "a", prec: 3)[0])
+    assert_equal("  a", Bug::Printf.("s", "a", width: 3, prec: 3)[0])
+    assert_equal("a  ", Bug::Printf.("s", "a", minus: true, width: 3, prec: 3)[0])
+  end
 end
